# oz-be-15-team1

./: .dockerignore  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.dev.yml  env  manage.py  pyproject.toml
.github/workflows/: checks.yml  deploy.yml
api_spac/: API_SPEC.md  API_SPEC_SWAGGER.md  API_SPEC_TABLE.md
apps/account/: apps.py  models.py  repositories.py  serializers.py  tests.py  views.py
apps/account/migrations/: 0001_initial.py  0002_remove_account_bank_code.py
apps/analysis/: admin.py  analyzers.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/analysis/migrations/: 0001_initial.py  0002_analysis_deleted_at_analysis_deleted_by.py
apps/bank_account/: apps.py  repositories.py  serializers.py  tests.py  urls.py  views.py
apps/bank_account/migrations/: 0001_initial.py  0003_account_deleted_at_account_deleted_by.py
apps/budget/: apps.py  models.py  services.py  signals.py
apps/budget/migrations/: 0001_initial.py
apps/category/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/category/migrations/: 0001_initial.py  0002_add_category_user.py  0002_alter_category_options_remove_category_updated_at_and_more.py  0003_fix_user_fk.py  0004_alter_category_user.py  0005_alter_category_options_remove_category_updated_at_and_more.py
apps/common/: models.py
apps/core/: auth.py
apps/members/: adapters.py  admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/members/migrations/: 0001_initial.py  0002_initial_user.py  0003_user_groups_user_user_permissions.py
apps/notification/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py  (+1 more)
apps/tag/: admin.py  apps.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
apps/transaction/: apps.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/trashcan/: apps.py  models.py  services.py  views.py
budget/: celery.py
config/: __init__.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
docs/: erd.dot
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx  styles.css
scripts/: generate_erd.sh  run.sh  update_category_expense_descriptions.py
(+24 files in other folders)
