[project]
name = "budget"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "django",
    "django-extensions>=4.1",
    "djangorestframework",
    "drf-spectacular",
    "psycopg[binary]",
    "Pillow",
]

[dependency-groups]
dev = [
    "ruff",
    "python-dotenv",
    "pre-commit",
]
prod = [
    "gunicorn",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F403"]
