[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budget"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "celery",
    "django",
    "django-celery-beat",
    "django-celery-results",
    "django-extensions>=4.1",
    "djangorestframework",
    "drf-spectacular",
    "matplotlib",
    "pandas",
    "pre-commit>=4.5.1",
    "psycopg[binary]",
    "Pillow",
    "redis",
    "ruff>=0.14.10",
    "gunicorn",
    "djangorestframework-simplejwt>=5.5.1",
]

[tool.setuptools]
packages = []



[dependency-groups]
dev = [
    "ruff",
    "python-dotenv",
    "pre-commit",
    "django-debug-toolbar",
]
prod = [
    "gunicorn",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F403"]
