[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budget"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "celery",
    "django",
    "drf-spectacular",
    "django-cors-headers",
    "django-celery-beat",
    "django-celery-results",
    "django-cors-headers",
    "django-extensions>=4.1",
    "djangorestframework",
    # SWAGGER: API 문서화 라이브러리
    "drf-yasg",
    "matplotlib",
    "pandas",
    "pre-commit>=4.5.1",
    "psycopg[binary]",
    "pillow",
    "redis",
    "ruff>=0.14.10",
    "gunicorn",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.2.1",
    "django-allauth[socialaccount]>=65.13.1",
    "psycopg2-binary>=2.9.11",
]

[tool.setuptools]
packages = []



[dependency-groups]
dev = [
    "ruff",
    "python-dotenv",
    "pre-commit",
    "django-debug-toolbar",
]
prod = [
    "gunicorn",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F403"]
